[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Dartty123 <dariyatamanuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-cors = "^5.0.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
